# turtle-sdk

./: README.md  pyproject.toml  requirements.txt
src/turtle_sdk/: __init__.py
src/turtle_sdk/turtles/: __init__.py  microphone_turtle.py  speaker_turtle.py  tts.py  turtle_tool_maker.py
src/turtle_sdk/turtles/audio/: microphone_turtle.py  speaker_turtle.py
src/turtle_sdk/turtles/audio_turtles/: __init__.py  microphone_turtle.py  speaker_turtle.py  tts.py
src/turtle_sdk/turtles/chat_turtle/: __init__.py
src/turtle_sdk/turtles/chat_turtles/: __init__.py  chat_turtle.py
src/turtle_sdk/turtles/db_turtles/: __init__.py  chroma_db.py  sql_alchemy.py
src/turtle_sdk/turtles/llm_turtle/: __init__.py
src/turtle_sdk/turtles/llm_turtles/: __init__.py  llama_turtle.py  llm_turtle.py  openai_turtle.py
src/turtle_sdk/turtles/socket_turtles/: __init__.py  _communicator.py  client_turtle.py  server_turtle.py
test/test_templates/: test_basic.py
test/turtles/audio_turtles/: test_microphone_turtle.py
