[project]
name="turtle-sdk"
version="1.0"
requires-python = ">=3.8"
authors = [
    {name="Andrew Reed", email="andrewreed2017@icloud.com"}
]
maintainers = [
    {name="Andrew Reed", email="andrewreed2017@icloud.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies=[
    "bale_of_turtles @ git+https://github.com/ghalrym/bale-of-turtles@main",
    "mini_tortoise_audio @ git+https://github.com/ghalrym/mini-tortoise-audio@main",
    "mini_tortoise_tts @ git+https://github.com/ghalrym/mini-tortoise-tts@main",
    "pydub",
    "numpy",
    "torchaudio",
]

[project.optional-dependencies]
testing = ["pytest", "black"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]